<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="rightAddress">The Right Address\n For Shopping\n Anyday</string>
    <string name="quality">It is now very easy to reach the\n best quality among all\n the products on the internet</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>